Fix animation gap

--- a/main.css
+++ b/main.css
@@ -22,5 +22,5 @@ body {
   background: #000;
   display:inline-block;
   box-shadow: inset 0 0 6px 0 rgba(120, 120, 120, .5);
-  transition: opacity 0.2s;
+  position:relative;
 }
